[project]
name = "Morgue RAG"
version = "0.1.0"
description = "A CLI tool to explore Graph Based Retrieval-Augmented Generation (GraphRAG)"
authors = [{ name = "LukV", email = "luk.verhelst@vlaanderen.be" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"

dependencies = ["duckdb>=1.3.1", "rdflib>=7.1.4", "typer>=0.15.4"]

[dependency-groups]
dev = [
    "commitizen>=4.8.2",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.11",
]

[project.scripts]
morgue-rag = "morgue-rag.cli:app"

[tool.uv]
package = true

[[tool.mypy.overrides]]
module = ["pandas.*"]
ignore_missing_imports = true
